# liminal-ide

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  GUIDE.md  README.md  index.html  package.json  pnpm-lock.yaml
server/: Cargo.toml  run.sh
server/src/: claude.rs  main.rs  orchestration.rs  state.rs  tools.rs  types.rs
src/: App.tsx  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/blackjack/: blackjack.ts  package-lock.json  package.json
src-tauri/calculator-app/: package-lock.json
src-tauri/calculator-app/calculator-app/src/: App.css  App.jsx
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  error.rs  lib.rs  state.rs
src-tauri/src/commands/: agents.rs  ai.rs  changes.rs  collab.rs  context.rs  debugger.rs  diff_staging.rs  editor_context.rs  filesystem.rs  git.rs  image.rs  lsp.rs  mention.rs  mod.rs  plugins.rs  project.rs  relay.rs  search.rs  session.rs  settings.rs  skills.rs  snippets.rs  summary.rs  terminal.rs  todo.rs
src-tauri/src/core/: events.rs  filesystem.rs  lint_runner.rs  mod.rs  project.rs  session.rs  terminal.rs  watcher.rs
src-tauri/src/core/agents/: mod.rs  storage.rs
src-tauri/src/core/ai_engine/: cli.rs  cli_handlers.rs  mod.rs  streaming.rs  types.rs
src-tauri/src/core/change_tracker/: mod.rs  snapshot.rs
src-tauri/src/core/collab/: client.rs  mod.rs  protocol.rs
src-tauri/src/core/context_pin/: mod.rs
src-tauri/src/core/debugger/: adapter.rs  mod.rs  protocol.rs  types.rs
src-tauri/src/core/diff_staging/: hunk.rs  mod.rs
src-tauri/src/core/editor_context/: mod.rs
(+290 files in other folders)
