[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
dirs-next = "2"
portable-pty = "0.8"
regex = "1"
similar = "2"
git2 = "0.20"
notify = "7"
notify-debouncer-mini = "0.5"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
qrcode = "0.14"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
